Delete files without spring implementations. Add example pagination.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,10 @@
-jdbc:
-  url: "jdbc:postgresql://localhost:5432/test_db"
-  user: "postgres"
-  password: "kanapka"
+spring:
+  datasource:
+    username: "postgres"
+    password: "kanapka"
+    url: "jdbc:postgresql://localhost:5432/test_db"
+    driver-class: "org.postgresql.Driver"
+  jpa:
+    show-sql: false
 
 
